--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div id="fm">
-        <audio src="asd.mp3"></audio>
+        <audio src=""></audio>
         <div id="main">
             <!--顶部缩小和抬头和选择风格区-->
             <div id="header">
