--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="">
 <link href="./css/interface.css" rel="stylesheet">
     <link href="./css/animate.css" rel="stylesheet">
-<link href="./css/font-awesome.min.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -19,7 +19,7 @@
             <!--顶部缩小和抬头和选择风格区-->
             <div id="header">
                 <div class="reduce">
-                    <i class="  icon-angle-down icon-2x"></i>
+                    <img src="icon/缩小.svg" alt="">
                 </div>
                 <!--歌手和歌名-->
                 <div class="musiceinfo">
@@ -28,11 +28,12 @@
                 </div>
                 <!--歌曲风格选择-->
                 <div class="style">
-                    <i class=" icon-align-justify icon-2x"></i>
+                    <img src="icon/音乐DNA.svg" alt="">
                     <ul class="stylecnt">
                     </ul>
                 </div>
             </div>
+            <div class="headerbar"></div>
             <!--播放器中间内容区-->
             <div id="content">
                 <div class="songcover">
@@ -49,18 +50,18 @@
                 </div>
 
                 <ul class="contro-cnt">
-                    <li class="vol"><i class="icon-volume-up icon-2x"></i>
-                        <div id="volchunk">
-                            <input class="volume" min="0" max="1" step="0.1" type="range">
-                            <div class="delta"></div>
-                            <div class="delta2"></div>
-                        </div>
-                    </li>
-                    <li class="mute"><i class="icon-volume-off icon-2x"></i></li>
-                    <li class="pre"><i class=" icon-step-backward icon-2x"></i></li>
-                    <li class="play"><i class="icon-play icon-3x"></i></li>
-                    <li class="pause"><i class="icon-pause icon-3x"></i></li>
-                    <li class="next"><i class="icon-step-forward icon-2x"></i></li>
+                    <!--<li class="vol"><img src="icon/音量.svg" alt="">-->
+                        <!--<div id="volchunk">-->
+                            <!--<input class="volume" min="0" max="1" step="0.1" type="range">-->
+                            <!--<div class="delta"></div>-->
+                            <!--<div class="delta2"></div>-->
+                        <!--</div>-->
+                    <!--</li>-->
+                    <li class="mute"><img class="" src="icon/静音.svg" alt=""></li>
+                    <li class="pre"><img src="icon/上一曲.svg" alt=""></li>
+                    <li class="play"><img src="icon/播放.svg" alt=""></li>
+                    <li class="pause"><img src="icon/暂停.svg" alt=""></li>
+                    <li class="next"><img src="icon/下一曲.svg" alt=""></li>
                 </ul>
             </div>
         </div>
