--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div id="fm">
-        <audio src=""></audio>
+        <audio src="不该.mp3"></audio>
         <div id="main">
             <!--顶部缩小和抬头和选择风格区-->
             <div id="header">
@@ -36,13 +36,34 @@
             <div class="headerbar"></div>
             <!--播放器中间内容区-->
             <div id="content">
-                <div class="songcover">
-                    <img src="" alt="">
+                <div class="edge">
+                    <div class="animat-cnt">
+                        <div class="rubber">
+                            <div class="songcover">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div class="wordsong">
+
+                </div>
+
+
+
             </div>
             <!--播放器控件区-->
             <div id="contro">
 
+                <div class="vol">
+                        <img class="volme" src="icon/音量.svg" alt="">
+                        <div class="volslip">
+                             <div class="volslider"></div>
+                </div>
+                    <div class="skin">
+                        <img src="icon/换肤.svg" alt="">
+                    </div>
+                </div>
                 <div class="progress">
                     <span class="befortime">00:00</span>
                     <div class="slider"></div>
@@ -57,7 +78,7 @@
                             <!--<div class="delta2"></div>-->
                         <!--</div>-->
                     <!--</li>-->
-                    <li class="mute"><img class="" src="icon/静音.svg" alt=""></li>
+
                     <li class="pre"><img src="icon/上一曲.svg" alt=""></li>
                     <li class="play"><img src="icon/播放.svg" alt=""></li>
                     <li class="pause"><img src="icon/暂停.svg" alt=""></li>
@@ -68,6 +89,7 @@
     </div>
 <script src="js/jquery.js"></script>
 <script src="js/main.js"></script>
+<script src="js/volcontrol.js"></script>
+    <!--<script src="js/musiceprogress.js"></script>-->
 </body>
 </html>
-<!--
