删除多余console和修复播放键

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div class="skin">
                         <img class='pointer' src="icon/换肤%20(1).svg" alt="">
                         <ul class="skinstyle">
-                            <li class="skinblack">黑的一批</li>
-                            <li class="skinred">红的一批</li>
-                            <li class="skingreen">绿的一批</li>
-                            <li class="skinyellow">黄的一批</li>
-                            <li class="skindefault">默认的一批</li>
+                            <li class="skinblack">黑的</li>
+                            <li class="skinred">红的</li>
+                            <li class="skingreen">绿的</li>
+                            <li class="skinyellow">黄的</li>
+                            <li class="skindefault">默认</li>
                         </ul>
                     </div>
                 </div>
@@ -82,14 +82,6 @@
                 </div>
 
                 <ul class="contro-cnt">
-                    <!--<li class="vol"><img src="icon/音量.svg" alt="">-->
-                        <!--<div id="volchunk">-->
-                            <!--<input class="volume" min="0" max="1" step="0.1" type="range">-->
-                            <!--<div class="delta"></div>-->
-                            <!--<div class="delta2"></div>-->
-                        <!--</div>-->
-                    <!--</li>-->
-
                     <li class="pre "><img class='pointer' src="icon/下一曲%20(1).svg" alt=""></li>
                     <li class="play "><img class='pointer' src="icon/播放%20(4).svg" alt=""></li>
                     <li class="pause "><img class='pointer' src="icon/暂停%20(9).svg" alt=""></li>
